--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "filp/whoops": ">=1.1.2"
+        "filp/whoops": ">=1.1.2",
+        "patricklouys/http": ">=1.1.0",
+        "nikic/fast-route": ">=1.0",
+        "rdlowrey/auryn": "^1.4"
     },
     "autoload": {
         "psr-4": {
