--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "filp/whoops": ">=1.1.2",
         "patricklouys/http": ">=1.1.0",
         "nikic/fast-route": ">=1.0",
-        "rdlowrey/auryn": "^1.4"
+        "rdlowrey/auryn": "^1.4",
+        "twig/twig": "~1.0"
     },
     "autoload": {
         "psr-4": {
